Adding pilot Japanese translation