@@ -52,7 +52,7 @@ public class PpktPhenotypicFeatureDutch implements PpktPhenotypicFeatureGenerato
         String penultimate = items.stream()
                 .limit(items.size() - 1)
                 .collect(Collectors.joining(", "));
-        String ultimate = items.get(items.size() - 1);
+        String ultimate = items.getLast();
         return penultimate + " en " + ultimate;
     }
 
