@@ -49,7 +49,7 @@ public class GermanBuildingBlocks implements BuildingBlockGenerator {
         if (components.isEmpty()) {
             return "am ersten Lebenstag";
         } else if (components.size() == 1) {
-            return components.get(0);
+            return components.getFirst();
         } else {
             return String.format("im Alter von %s und %s", components.get(0), components.get(1));
         }
@@ -70,7 +70,7 @@ public class GermanBuildingBlocks implements BuildingBlockGenerator {
         if (components.isEmpty()) {
             return "am ersten Lebenstag";
         } else if (components.size() == 1) {
-            return components.get(0);
+            return components.getFirst();
         } else if (components.size() == 2) {
             return String.format("im Alter von %s und %s", components.get(0), components.get(1));
         } else {
